# seungjin.net

./: 404.html  CNAME  Cargo.toml  README.md  browser_default.html  disqus.html  index.html  my-disqus.html  quotes.html
app/: index.html  leptos-tutorial-5937c9dfec768b44.js  leptos-tutorial-5937c9dfec768b44_bg.wasm  leptos-tutorial-a9d396f79a3e3583.js  leptos-tutorial-a9d396f79a3e3583_bg.wasm  leptos-tutorial-db8601af6569f105.js  leptos-tutorial-db8601af6569f105_bg.wasm
docs/: index.html
ko/: index.html
ko/public_speech/: index.html
ko/writing/: 글쓰기의 어려움은.md
pgp/: 0x364888A8.txt
pub/: index.html
pub/.well-known/wasm-pkg/: registry.json
pub/app/: index.html  seungjin-web-a49b9d1a29aee561.js  seungjin-web-a49b9d1a29aee561_bg.wasm  seungjin-web-baf44b5f862becfe.js  seungjin-web-baf44b5f862becfe_bg.wasm
public_speech/: index.html
src/: utils.rs
src/app/: Cargo.toml  Makefile  Trunk.toml  index.html
src/app/src/: ifconfig.rs  lib.rs  main.rs  main1.rs
static/script/: ga.js
static/style/: main.css  quotes.css
