[package]
name = "leptos-tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0-alpha.2"
leptos = { version = "0.6.15", features = ["csr"] }
web-sys = { version = "0.3", features = ["Element", "HtmlElement"] }
wasm-bindgen = "0.2"
leptos_router = { version = "0.6.15", features = ["csr"] }
